--- a/index.html
+++ b/index.html
@@ -5,67 +5,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TDS Data Analyst Agent</title>
   <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      line-height: 1.6; color:#333;
-      background: linear-gradient(135deg,#667eea 0%,#764ba2 100%);
-      min-height:100vh;
-    }
-    .container { max-width:1200px; margin:0 auto; padding:20px; }
-    .header { text-align:center; margin-bottom:30px; color:#fff; }
-    .header h1 { font-size:2.5rem; margin-bottom:10px; text-shadow:2px 2px 4px rgba(0,0,0,.3); }
-    .header p { font-size:1.1rem; opacity:.9; }
-    .main-card {
-      background:#fff; border-radius:15px; box-shadow:0 10px 30px rgba(0,0,0,.2);
-      padding:30px; margin-bottom:30px;
-    }
-    .form-group { margin-bottom:25px; }
-    .form-group label { display:block; margin-bottom:8px; font-weight:600; color:#555; }
-    .file-input-wrapper { position:relative; display:inline-block; width:100%; }
-    .file-input {
-      width:100%; padding:15px; border:2px dashed #e1e5e9; border-radius:8px;
-      background:#f8f9fa; cursor:pointer; transition:.3s ease; text-align:center; position:relative;
-    }
-    .file-input:hover { border-color:#667eea; background:#f0f2ff; }
-    .file-input input[type="file"] { position:absolute; opacity:0; width:100%; height:100%; left:0; top:0; cursor:pointer; }
-    .file-info { margin-top:10px; padding:10px; background:#e8f4fd; border-radius:5px; font-size:14px; color:#0066cc; display:none; }
-    .btn {
-      background:linear-gradient(135deg,#667eea 0%,#764ba2 100%); color:#fff; border:none;
-      padding:15px 30px; border-radius:8px; font-size:16px; font-weight:600; cursor:pointer; transition:.3s ease; width:100%;
-    }
-    .btn:hover { transform:translateY(-2px); box-shadow:0 5px 15px rgba(102,126,234,.4); }
-    .btn:disabled { background:#ccc; cursor:not-allowed; transform:none; box-shadow:none; }
-    .btn-secondary { background:#6c757d; width:auto; }
-    .button-group { display:flex; gap:10px; margin-top:20px; flex-wrap:wrap; }
-    .loading { display:none; text-align:center; padding:20px; }
-    .spinner {
-      border:4px solid #f3f3f3; border-top:4px solid #667eea; border-radius:50%;
-      width:40px; height:40px; animation:spin 1s linear infinite; margin:0 auto 15px;
-    }
-    @keyframes spin { 0%{transform:rotate(0)} 100%{transform:rotate(360deg)} }
-    .results { display:none; margin-top:30px; }
-    .result-item { background:#f8f9fa; border-left:4px solid #667eea; padding:20px; margin-bottom:20px; border-radius:0 8px 8px 0; }
-    .question { font-weight:600; color:#333; margin-bottom:15px; font-size:1.1rem; }
-    .answer { color:#555; line-height:1.6; }
-    .answer img {
-      max-width:100%; height:auto; border-radius:8px; margin:10px 0;
-      box-shadow:0 4px 8px rgba(0,0,0,.1); cursor:pointer; transition:transform .3s ease;
-    }
-    .answer img:hover { transform:scale(1.02); }
-    .error { background:#f8d7da; border-left-color:#dc3545; color:#721c24; }
-    .modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,.9); }
-    .modal-content { margin:auto; display:block; width:80%; max-width:700px; max-height:80%; object-fit:contain; }
-    .close { position:absolute; top:15px; right:35px; color:#f1f1f1; font-size:40px; font-weight:bold; cursor:pointer; }
-    .close:hover { color:#bbb; }
-    @media (max-width:768px){
-      .container{padding:10px}
-      .header h1{font-size:2rem}
-      .main-card{padding:20px}
-      .button-group{flex-direction:column}
-      .btn-secondary{width:100%}
-    }
-  </style>
+  * { margin:0; padding:0; box-sizing:border-box; }
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1.6; color:#f5f5f5;
+    background: linear-gradient(135deg,#1e1e2f 0%,#2a2a3d 100%);
+    min-height:100vh;
+  }
+  .container { max-width:1200px; margin:0 auto; padding:20px; }
+  .header { text-align:center; margin-bottom:30px; color:#fff; }
+  .header h1 { font-size:2.5rem; margin-bottom:10px; text-shadow:2px 2px 4px rgba(0,0,0,.6); }
+  .header p { font-size:1.1rem; opacity:.85; }
+  .main-card {
+    background:#2c2c3e; border-radius:15px; box-shadow:0 10px 30px rgba(0,0,0,.4);
+    padding:30px; margin-bottom:30px;
+  }
+  .form-group label { display:block; margin-bottom:8px; font-weight:600; color:#ddd; }
+  .file-input {
+    width:100%; padding:15px; border:2px dashed #555; border-radius:8px;
+    background:#1f1f2e; cursor:pointer; transition:.3s ease; text-align:center; position:relative;
+    color:#bbb;
+  }
+  .file-input:hover { border-color:#667eea; background:#2a2a40; color:#fff; }
+  .file-info { margin-top:10px; padding:10px; background:#333; border-radius:5px; font-size:14px; color:#a8c7ff; display:none; }
+  .btn {
+    background:linear-gradient(135deg,#667eea 0%,#764ba2 100%); color:#fff; border:none;
+    padding:15px 30px; border-radius:8px; font-size:16px; font-weight:600; cursor:pointer; transition:.3s ease; width:100%;
+  }
+  .btn:hover { transform:translateY(-2px); box-shadow:0 5px 15px rgba(102,126,234,.6); }
+  .btn:disabled { background:#555; cursor:not-allowed; transform:none; box-shadow:none; }
+  .btn-secondary { background:#444; color:#ddd; }
+  .button-group { display:flex; gap:10px; margin-top:20px; flex-wrap:wrap; }
+  .loading { display:none; text-align:center; padding:20px; }
+  .spinner {
+    border:4px solid #444; border-top:4px solid #667eea; border-radius:50%;
+    width:40px; height:40px; animation:spin 1s linear infinite; margin:0 auto 15px;
+  }
+  @keyframes spin { 0%{transform:rotate(0)} 100%{transform:rotate(360deg)} }
+  .results { display:none; margin-top:30px; }
+  .result-item { background:#1f1f2e; border-left:4px solid #667eea; padding:20px; margin-bottom:20px; border-radius:0 8px 8px 0; }
+  .question { font-weight:600; color:#fff; margin-bottom:15px; font-size:1.1rem; }
+  .answer { color:#ccc; line-height:1.6; }
+  .answer pre {
+    background:#2c2c3e; color:#eee;
+  }
+  .answer img {
+    max-width:100%; height:auto; border-radius:8px; margin:10px 0;
+    box-shadow:0 4px 8px rgba(0,0,0,.5); cursor:pointer; transition:transform .3s ease;
+  }
+  .answer img:hover { transform:scale(1.02); }
+  .error { background:#3b1f1f; border-left-color:#dc3545; color:#ffb3b3; }
+  .modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,.9); }
+  .modal-content { margin:auto; display:block; width:80%; max-width:700px; max-height:80%; object-fit:contain; }
+  .close { position:absolute; top:15px; right:35px; color:#f1f1f1; font-size:40px; font-weight:bold; cursor:pointer; }
+  .close:hover { color:#bbb; }
+  @media (max-width:768px){
+    .container{padding:10px}
+    .header h1{font-size:2rem}
+    .main-card{padding:20px}
+    .button-group{flex-direction:column}
+    .btn-secondary{width:100%}
+  }
+</style>
 </head>
 <body>
   <div class="container">
